--- a/app/src/main/res/navigation/navigation_user.xml
+++ b/app/src/main/res/navigation/navigation_user.xml
@@ -98,6 +98,12 @@
         tools:layout="@layout/fragment_release"/>
 
     <fragment
+        android:id="@+id/chat_fragment"
+        android:name="com.example.myplayer.ui.ChatFrahment"
+        android:label="客服"
+        tools:layout="@layout/fragment_chats"/>
+
+    <fragment
         android:id="@+id/uploadmovie_fragment"
         android:name="com.example.myplayer.ui.UploadMovie"
         android:label="发布"
@@ -113,8 +119,8 @@
 
     <fragment
         android:id="@+id/navigation_lives"
-        android:name="com.example.myplayer.ui.ChatFrahment"
-        tools:layout="@layout/fragment_chats"
+        android:name="com.example.myplayer.ui.AccountFragment"
+        tools:layout="@layout/fragment_account"
         android:label="Lives" />
 
     <fragment
@@ -123,8 +129,8 @@
         tools:layout="@layout/fragment_account"
         android:label="Account" >
         <action
-            android:id="@+id/action_navigation_notifications_to_navigation_lives"
-            app:destination="@id/navigation_lives" />
+            android:id="@+id/action_navigation_notifications_to_chat_fragment"
+            app:destination="@id/chat_fragment" />
     </fragment>
 
     <fragment
