--- a/app/src/main/res/navigation/navigation_user.xml
+++ b/app/src/main/res/navigation/navigation_user.xml
@@ -121,7 +121,7 @@
         android:id="@+id/navigation_lives"
         android:name="com.example.myplayer.ui.AccountFragment"
         tools:layout="@layout/fragment_account"
-        android:label="Lives" />
+        android:label="Square" />
 
     <fragment
         android:id="@+id/navigation_notifications"
