--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,8 +13,8 @@
 
     <item
         android:id="@+id/navigation_lives"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="Lives" />
+        android:icon="@drawable/ic_baseline_satellite_24"
+        android:title="Square" />
 
     <item
         android:id="@+id/navigation_notifications"
