--- a/app/src/main/res/layout/list_item_circle.xml
+++ b/app/src/main/res/layout/list_item_circle.xml
@@ -86,6 +86,7 @@
                 android:layout_height="match_parent"/>
 
             <ImageView
+                android:id="@+id/playback"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 app:isPlayButtonShow="@{circles.isPhoto}"
