--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,15 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowTranslucentStatus">false</item>
+        <!-- Set status bar background color to transparent -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <!-- Disable adding a tinted background for the navigation bar -->
+        <item name="android:windowTranslucentNavigation">false</item>
+        <!-- Set navigation bar background color to transparent -->
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <!-- 'Cause we use transparent color, the window must be drawing the system bar backgrounds -->
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
