--- a/app/src/main/res/layout/chat_dialog_right_item.xml
+++ b/app/src/main/res/layout/chat_dialog_right_item.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="entity"
+            type="com.example.myplayer.data.db.ChatEntity" />
 
     </data>
 
@@ -13,38 +17,60 @@
         android:orientation="horizontal">
 
         <RelativeLayout
-            android:visibility="gone"
             android:id="@+id/firend"
-            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:visibility="visible">
 
-        <ImageView
-            android:id="@+id/ivicon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@mipmap/kefu1"
-            android:layout_gravity="top" />
 
-        <TextView
-            android:id="@+id/tvname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:padding="8dp"
-            android:background="@drawable/account_background"
-            android:text="权志龙好帅！！！" />
+            <ImageView
+                android:id="@+id/ivicon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="top"
+                android:background="@mipmap/kefu1" />
+
+            <TextView
+                android:id="@+id/tvname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/ivicon"
+                android:background="@drawable/account_background"
+                android:padding="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:text="权志龙好帅！！！" />
+
+            <ImageView
+                android:id="@+id/tv_chat_firend_image"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_toRightOf="@+id/ivicon"
+                app:bindChatImage="@{entity.isImage}"
+                app:imageUrl="@{entity.url}" />
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_weight="1"
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/me"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/tv_chat_me_image"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginRight="8dp"
+                android:layout_toLeftOf="@+id/iv_chat_imagr_right"
+                app:bindChatImage="@{entity.isImage}"
+                app:imageUrl="@{entity.url}"/>
 
             <TextView
                 android:id="@+id/tv_chat_me_message"
