--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -43,9 +43,16 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="40dp"
             android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/snd_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/ic_baseline_photo_library_24"
+                android:layout_marginLeft="10dp"/>
 
             <EditText
                 android:id="@+id/et_chat_message"
@@ -61,7 +68,7 @@
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="64dp"
                 android:text="发送"
-                android:textSize="10dp"
+                android:textSize="15dp"
                 android:layout_marginLeft="8dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center|right"
