--- a/app/src/main/res/layout/list_item_info.xml
+++ b/app/src/main/res/layout/list_item_info.xml
@@ -21,10 +21,11 @@
 
         <ImageView
             android:id="@+id/imageView"
+            android:scaleType="fitXY"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            tools:layout_editor_absoluteX="30dp"
-            tools:layout_editor_absoluteY="0dp"
+            android:paddingLeft="20dp"
+            android:layout_marginLeft="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:bindInfoImage="@{info.url}"
