--- a/app/src/main/res/layout/list_item_movies.xml
+++ b/app/src/main/res/layout/list_item_movies.xml
@@ -12,17 +12,25 @@
             type="com.example.myplayer.data.db.MoviesEntity" />
 
     </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@drawable/account_background"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
+
         android:onClick="@{clickListener}"
+        app:cardCornerRadius="7dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:background="#61BDBD"
+        android:layout_height="wrap_content">
+
         <ImageView
+            android:layout_alignParentLeft="true"
+            android:adjustViewBounds="true"
+        android:scaleType="fitXY"
             android:id="@+id/series_child_item_image"
             android:layout_width="match_parent"
             android:layout_height="140dp"
@@ -31,15 +39,18 @@
             app:bindMoviesImage="@{asset.url}" />
 
         <TextView
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/series_child_item_image"
             android:text="@{asset.num}"
+            android:layout_margin="8dp"
             android:textSize="20dp"
             android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
