--- a/app/src/main/res/layout/dialog_exit.xml
+++ b/app/src/main/res/layout/dialog_exit.xml
@@ -11,6 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="确定要退出应用吗"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="center"
         android:textColor="#ff1493"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
