--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -191,7 +191,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Desc: "
+                android:text="描述: "
                 app:layout_constraintBottom_toTopOf="@id/content_desc"
                 app:layout_constraintTop_toBottomOf="@id/head_phone_deatil"
                 app:layout_constraintStart_toStartOf="parent" />
