--- a/app/src/main/res/layout/fragment_friend_send.xml
+++ b/app/src/main/res/layout/fragment_friend_send.xml
@@ -65,12 +65,14 @@
 
         <ImageView
             android:id="@+id/photo"
-            android:scaleType="fitXY"
-            android:layout_width="120dp"
-            android:layout_height="200dp"
+            android:layout_marginTop="60dp"
+            android:layout_width="200dp"
+            android:layout_height="120dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/share_point"
-            android:layout_margin="20dp" />
+  />
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
