--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -30,7 +30,7 @@
             android:id="@+id/category_list"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_width="wrap_content"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:scrollbars="none"
@@ -49,6 +49,7 @@
            app:layout_constraintTop_toBottomOf="@+id/category_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
             android:clipToPadding="false"
             android:overScrollMode="never"
             android:scrollbars="none"
