--- a/app/src/main/res/layout/list_item_info.xml
+++ b/app/src/main/res/layout/list_item_info.xml
@@ -13,49 +13,99 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:background="@drawable/item_background_corner"
+        android:elevation="3dp"
+        android:outlineProvider="background"
+        android:translationZ="3dp"
         android:onClick="@{clickListener}"
         android:layout_height="170dp">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:scaleType="fitXY"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"
+            android:alpha="0.3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@mipmap/baise2"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/imageViewP"
+            app:cardCornerRadius="75dp"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:paddingLeft="20dp"
+            android:padding="2dp"
+            app:cardBackgroundColor="@color/icPressed"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:bindInfoImage="@{info.url}"
-            android:transitionName="image"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_gravity="center">
+        <androidx.cardview.widget.CardView
+            app:cardCornerRadius="72dp"
+            android:layout_width="144dp"
+            android:layout_height="144dp"
+            android:layout_gravity="center">
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:bindInfoImage="@{info.url[0]}"
+                android:transitionName="image"
+                tools:srcCompat="@tools:sample/avatars"
+                android:scaleType="fitXY"/>
+        </androidx.cardview.widget.CardView>
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/titleN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:textSize="15dp"
+            android:layout_marginStart="15dp"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
+            android:background="@drawable/title_background"
+            android:text="@{info.title}"
+            app:layout_constraintStart_toEndOf="@id/imageViewP"
+            app:layout_constraintTop_toTopOf="@+id/imageViewP"
+            app:layout_constraintBottom_toTopOf="@+id/head"
+            />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/head"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView">
+            android:layout_height="75dp"
+            app:layout_constraintTop_toBottomOf="@+id/titleN"
+            app:layout_constraintStart_toEndOf="@+id/imageViewP"
+            app:layout_constraintBottom_toBottomOf="@+id/imageViewP">
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/head_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="15dp"
                 android:text="标题: "
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/head_city"/>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/content_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:text="@{info.title}"
                 app:layout_constraintTop_toTopOf="@id/head_title"
                 app:layout_constraintStart_toEndOf="@id/head_title"
                 app:layout_constraintBottom_toBottomOf="@+id/head_title"/>
