--- a/app/src/main/res/layout/list_item_movies.xml
+++ b/app/src/main/res/layout/list_item_movies.xml
@@ -14,9 +14,10 @@
     </data>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-
+        android:background="#5561BDBD"
         android:onClick="@{clickListener}"
         app:cardCornerRadius="7dp"
+        app:cardElevation="7dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
