--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -19,4 +19,10 @@
         <attr name="arcPaddingAngle" format="integer"/>
     </declare-styleable>
 
+    <declare-styleable name="MyScrollView">
+        <attr name="needLanjie" format="boolean"></attr>
+        <attr name="colorValue" format="color"></attr>
+        <attr name="textSize" format="dimension"></attr>
+    </declare-styleable>
+
 </resources>
